--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <body>
     <div id="header">
       <div class="container">
-        <a id="header-title" href="index.html">Justin Learns Code</a>
+        <a id="header-title" href="index.html">Justin Learns to Code</a>
         <ul id="header-nav">
           <li><a href="about.html">About<a/></li>
           <li><a href="projects.html">Projects<a/></li>
