--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
         <div class="column">
           <h4>My Story</h4>
-          <p> Hi there! I'm an aspiring data analyst, with my eyes on the digital and web analytics space.
+          <p>On a mission to learn new skills for the digital world that has now arrived.
           <br>Follow along on my journey as I seek to learn all things coding and analytics!</p>
         </div>
       </div>
