--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
       <div class="container">
         <a id="header-title" href="index.html">Justin Learns to Code</a>
         <ul id="header-nav">
-          <li><a href="about.html">About<a/></li>
-          <li><a href="projects.html">Projects<a/></li>
+          <li><a href="about.html" target = "_blank">About<a/></li>
+          <li><a href="projects.html" target = "_blank">Projects<a/></li>
           <li><a href="mailto:fowler.justin08@gmail.com">Contact</a></li>
         </ul>
       </div>
@@ -32,19 +32,19 @@
       </div>
     </div>
       <div id="footer">
-        <div class="container">
-          <div class="column">
+        <div class="foot-container">
+          <div id="links">
             <h4>Links</h4>
             <p>
-              <a href="https://twitter.com/jafowler85">Twitter</a>
+              <a href="https://twitter.com/jafowler85" target="_blank">Twitter</a>
               <br>
-              <a href="https://linkedin.com/in/justin-fowler-b25b9521">LinkedIn</a>
+              <a href="https://linkedin.com/in/justin-fowler-b25b9521" target="_blank">LinkedIn</a>
             </p>
           </div>
-          <div class="column">
+          <div id="story">
             <h4>My Story</h4>
-            <p>On a mission to learn new skills for the digital world that has now arrived.
-            <br>Follow along on my journey as I seek to learn all things coding and analytics!</p>
+            <p>On a mission to learn new skills for the digital world.
+            <br>Follow along on my journey to learn all things coding and analytics!</p>
           </div>
         </div>
       </div>
