--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <title>Justin Learns to Code</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>
  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -12,17 +13,19 @@
  ga('send', 'pageview');
 </script>
   </head>
-  <body>
+  <header>
     <div id="header">
-      <div class="container">
-        <a id="header-title" href="index.html">Justin Learns to Code</a>
+      <div class = "container">
+      <a id="header-title" href="index.html">Justin Learns to Code</a>
         <ul id="header-nav">
-          <li><a href="about.html" target = "_blank">About<a/></li>
-          <li><a href="projects.html" target = "_blank">Projects<a/></li>
-          <li><a href="mailto:fowler.justin08@gmail.com">Contact</a></li>
+          <li><a class="btn" href="about.html">About<a/></li>
+          <li><a class="btn" href="projects.html">Projects<a/></li>
+          <li><a class="btn" href="mailto:fowler.justin08@gmail.com">Contact</a></li>
         </ul>
       </div>
     </div>
+  </header>
+  <body>
     <div id="content">
       <div class="container">
         <div class="projects">
@@ -31,22 +34,19 @@
         </div>
       </div>
     </div>
-      <div id="footer">
-        <div class="foot-container">
-          <div id="links">
-            <h3>Links</h3>
-            <p>
-              <a href="https://twitter.com/jafowler85" target="_blank">Twitter</a>
-              <br>
-              <a href="https://linkedin.com/in/justin-fowler-b25b9521" target="_blank">LinkedIn</a>
-            </p>
-          </div>
-          <div id="story">
-            <h3>My Story</h3>
-            <p>On a mission to learn new skills for the digital world.
-            <br>Follow along on my journey to learn all things coding and analytics!</p>
-          </div>
-        </div>
-      </div>
   </body>
+  <footer>
+    <div class="foot-container">
+      <div id="links">
+        <h3>Social Media</h3>
+        <a href="https://twitter.com/jafowler85" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/justin-fowler-b25b9521/" target="_blank" class="fa fa-linkedin"></a>
+    </div>
+    <div id="story">
+      <h3>My Story</h3>
+        <p>On a mission to learn new skills for the digital world.
+        <br>Follow along on my journey to learn all things coding and analytics!</p>
+    </div>
+    </div>
+  </footer>
 </html>
