--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <a href="https://www.linkedin.com/in/justin-fowler-b25b9521/" target="_blank" class="fa fa-linkedin"></a>
     </div>
     <div id="story">
-      <h3>MAbout Me</h3>
+      <h3>About Me</h3>
       <p>On a mission to learn new skills for the digital world.
         <br>Follow along on my journey to learn all things coding and analytics!</p>
     </div>
