--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h1>Hi, I'm Justin Fowler</h1>
             <h3>Project Management | Analytics | Data Management</h3>
             <p>Omni-channel professional with 15+ years of experience in the Home Improvement retail industry. <br>
-            Experience in product data management, digital product content, project management and digital commerce.</p>
+            Experience in product data management, digital product content, digital commerce and project management.</p>
 
             <!--Buttons linking to navbar pages-->
                <div class="btn-box">
